# wormbot

./: .gitignore
configurations/: green-detection.yaml
src/: CMakeSettings.json
src/blob_tracking/: CMakeLists.txt  package.xml  setup.py
src/blob_tracking/cfg/: ColorLimits.cfg  HSVLimits.cfg
src/blob_tracking/config/: blob_tracking_config.yml
src/blob_tracking/launch/: main.launch
src/blob_tracking/nodes/: blob_hsv_calibrator_node.py  blob_tracking_node.py
src/camera/: CMakeLists.txt  package.xml  setup.py
src/camera/config/: camera_config.yml
src/camera/launch/: camera.launch
src/camera/nodes/: camera_calibrator.py  camera_node.py
src/camera/srv/: ServiceImage.srv
src/control/: CMakeLists.txt  package.xml
src/control/config/: control_config.yml
src/control/include/control/: control_hw_interface.h
src/control/launch/: main.launch
src/control/nodes/: control_node.cpp
src/control/src/: control_hw_interface.cpp
src/drivers/: CMakeLists.txt  package.xml  setup.py
src/drivers/cfg/: PIDLimits.cfg
src/drivers/launch/: main.launch
src/drivers/msg/: Duty.msg  Speed.msg  SpeedMessage.msg
src/drivers/nodes/: driver_node.py
src/drivers/src/board/: __init__.py  driver.py  motor.py  motor_driver.py
src/drivers/src/drivers.egg-info/: PKG-INFO  SOURCES.txt
src/drivers/srv/: SpeedCommand.srv
src/joystick/: CMakeLists.txt  package.xml  setup.py
src/joystick/config/: joy_params.yml
src/joystick/launch/: main.launch
src/joystick/nodes/: joy_control_node.cpp  joystick_node.py
src/main/: CMakeLists.txt  package.xml
(+14 files in other folders)
