<?xml version="1.0"?>
<package format="2">
  <name>drivers</name>
  <version>0.0.1</version>
  <description>Drivers for wormbot</description>

  <maintainer email="jm.carb@gmail.com">Juan Manuel Carballo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>python3-smbus</build_depend>
  <exec_depend>python3-smbus</exec_depend>
  <build_depend>python3-simple-pid-pip</build_depend>
  <exec_depend>python3-simple-pid-pip</exec_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
